--- a/new.html
+++ b/new.html
@@ -7,6 +7,8 @@
     <title>My new repo</title>
 </head>
 <body>
+    <h1>Ami ekjon mahir ebong kew na</h1>
+    <small>ei shuno toh ektu</small>
     
 </body>
 </html>
