--- a/new.html
+++ b/new.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Ami ekjon mahir ebong kew na</h1>
     <small>ei shuno toh ektu</small>
-    
+    <img src="khalid.jpg" alt="">
 </body>
 </html>
